tests/error/struct_errors/func_overrides_field1.err
Error: Duplicate field (at $FILE:9:4)
   | 
 7 | 
 8 |     @guppy
 9 |     def x(self: "MyStruct") -> int:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |         return 0
   | ^^^^^^^^^^^^^^^^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
